syntax = 'proto3';

option java_multiple_files = true;
option java_package = "org.example";

service SimpleService{
  rpc SimpleSend(SimpleRequest) returns (SimpleResponse) {};
}

message SimpleRequest {
  string msg = 1;
  string uuid = 2;
}

message SimpleResponse {
  string response_msg = 1;
  bool is_admin = 2;
}